--- a/cs28_project/templates/login.html
+++ b/cs28_project/templates/login.html
@@ -45,7 +45,8 @@
 {% block body_block %}
 <div class="login-form">
     <form action="{% url 'cs28:login' %}" method="post">
-        <h2 class="text-center">Log in</h2>       
+        {% csrf_token %}
+        <h2 class="text-center">Log in</h2>
         <div class="form-group">
             <div class="input-group">
                 <div class="input-group-prepend">
@@ -54,7 +55,7 @@
                         <i class="fas fa-envelope"></i>
                     </span>
                 </div>
-                <input type="text" class="form-control" placeholder="Username" required>
+                <input type="text" class="form-control" placeholder="Username" name="username" required>
             </div>
         </div>
         <div class="form-group">
@@ -65,11 +66,11 @@
                         <i class="fas fa-key"></i>
                     </span>
                 </div>
-                <input type="password" class="form-control" placeholder="Password" required>
+                <input type="password" class="form-control" placeholder="Password" name="password" required>
             </div>
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-block">Log in</button>
+            <button type="submit" value="submit" class="btn btn-primary btn-block">Log in</button>
         </div>
         <div class="clearfix">
             <label class="float-left checkbox-inline"><input type="checkbox"> Remember me</label>
